--- a/app/src/main/res/layout/activity_add_new_note.xml
+++ b/app/src/main/res/layout/activity_add_new_note.xml
@@ -114,7 +114,7 @@
     </RadioGroup>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewPhoto"
+        android:id="@+id/cardViewNote"
         style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -129,58 +129,12 @@
         app:layout_constraintTop_toBottomOf="@+id/frameLayout">
 
         <RelativeLayout
-            android:id="@+id/relativeLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/photoImageView"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_photo" />
-
-            <EditText
-                android:id="@+id/photoNoteEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/photoImageView"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:background="@android:color/transparent"
-                android:gravity="top"
-                android:hint="@string/add_note_text"
-                android:padding="16dp" />
-
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewNote"
-        style="@style/Widget.MaterialComponents.CardView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_below="@+id/titleTextView"
-        android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/blue"
-        android:padding="8dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout">
-
-        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp">
 
             <EditText
-                android:id="@+id/noteEditText"
+                android:id="@+id/noteEditText_in_activity_change"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -201,7 +155,7 @@
         android:layout_height="0dp"
         android:layout_below="@+id/titleTextView"
         android:layout_marginBottom="8dp"
-        android:backgroundTint="@color/yellow"
+        android:backgroundTint="@color/blue"
         android:padding="8dp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -215,7 +169,7 @@
             android:padding="8dp">
 
             <EditText
-                android:id="@+id/checkNoteEditText"
+                android:id="@+id/noteText_item_in_activity"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="8dp"
@@ -224,13 +178,13 @@
                 android:background="@android:color/transparent"
                 android:gravity="top"
                 android:hint="@string/add_note_text"
-                app:layout_constraintBottom_toTopOf="@+id/checkNoteCheckBox"
+                app:layout_constraintBottom_toTopOf="@+id/checkNote_item_in_avtivity"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <CheckBox
-                android:id="@+id/checkNoteCheckBox"
+                android:id="@+id/checkNote_item_in_avtivity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -239,6 +193,53 @@
                 app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewPhoto"
+        style="@style/Widget.MaterialComponents.CardView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_below="@+id/titleTextView"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/blue"
+        android:padding="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frameLayout">
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/photoImageView_in_activity"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_photo" />
+
+            <EditText
+                android:id="@+id/photoNoteEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/photoImageView_in_activity"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:background="@android:color/transparent"
+                android:gravity="top"
+                android:hint="@string/add_note_text"
+                android:padding="16dp" />
+
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
