--- a/app/src/main/res/layout/activity_note_photo_details.xml
+++ b/app/src/main/res/layout/activity_note_photo_details.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/relativeLayout_in_activity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/blue">
 
     <ImageView
-        android:id="@+id/photoImageView"
+        android:id="@+id/photoImageView_in_activity"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
@@ -17,7 +19,7 @@
         android:id="@+id/photoNoteEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/photoImageView"
+        android:layout_below="@+id/photoImageView_in_activity"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
